--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="">About</a></li>
                 
             </ul>
-            <img class="menu-icon" src="hamburger.png" alt="">
+            <img class="menu-icon" src="images/hamburger.png" alt="">
     
         </nav>
         <!-- Banner Section -->
