meet our team section done

--- a/index.html
+++ b/index.html
@@ -213,6 +213,10 @@
       </div>
     </section>
   </section>
+  <!-- TEstimonial Section -->
+   
+
+
   <!-- Meet Our Team Section -->
    <section class="met-our-team">
 
