--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <main>
       <!-- Change Your Habits -->
-      <section class="habits-container hide">
+      <section class="habits-container ">
         <div class="habit-details">
           <h1>Change Your Habits</h1>
           <p>
@@ -137,11 +137,21 @@
         <div class="run-img">
           <img src="images/run.jpg" alt="" />
         </div>
-      </section>
 
+        
+      </section>
+     
 
     </main>
     <!-- bmi-main-container -->
+     <section class="bmi-heading">
+      <h1>BMI Calculator</h1>
+      <p>We believe fitness should be accessible to everyone, everywhere,
+         regardless of income or access to a gym.</p>
+     </section>
+
+
+
      <section class="bmi-full-container">
 
  
@@ -223,7 +233,7 @@
 
  
 
-   <div class="team-container">
+   <div class="team-container ">
     <div class="team-details">
       <h1>Meet Our Team</h1>
 <p>We believe fitness should be accessible to everyone, everywhere,
@@ -289,7 +299,7 @@
     </div>
    </div>  </section>
    <!-- Testimonial Section -->
-    <section class="testimonial-container">
+    <section class="testimonial-container ">
       <div class="testimonial-main">
         <div class="clients-image">
           <div class="img-1">
