--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
           <option value="very_active">Very active (hard exercise/sports 6-7 days a week)</option>
           <option value="extra_active">Super active (very hard exercise/sports and a physical job)</option>
         </select>
-        <input class="submit" type="submit" value="Submit">
+        <input class="submit" type="submit" value="Calculate">
         <div class="empty"></div>
 
         </div>
@@ -224,7 +224,7 @@
       </div>
     </section>
   </section>
-  <!-- TEstimonial Section -->
+  
    
 
 
@@ -300,10 +300,11 @@
    </div>  </section>
    <!-- Testimonial Section -->
     <section class="testimonial-container ">
+      <h1 class="testimonialHeading">Our Clients' Testimonials</h1>
       <div class="testimonial-main">
         <div class="clients-image">
           <div class="img-1">
-            <!-- <img src="client3.jpg" alt=""> -->
+           
            
           </div>
           <div class="img-2">
@@ -334,7 +335,7 @@
 
 
 
-   <footer class="">
+   <footer class="footer-container">
     <div class="footer-main">
         <div class="footer-col1">
             <h1 class="footer-heading">Fitness</h1>
