--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
   </head>
   <body>
-    <header class="header">
+    <header class="header ">
       <nav>
         <h3 class="nav-title primary-color">Fitness</h3>
         <ul>
@@ -68,7 +68,7 @@
 
     <main>
       <!-- Change Your Habits -->
-      <section class="habits-container">
+      <section class="habits-container ">
         <div class="habit-details">
           <h1>Change Your Habits</h1>
           <p>
@@ -124,7 +124,7 @@
       </section>
 
       <!-- Run And Extra Section -->
-      <section class="run-container">
+      <section class="run-container ">
         <div class="run-details">
           <h1>Run an Extra Mile Easily</h1>
           <p>
@@ -140,7 +140,7 @@
       </section>
     </main>
     <!-- bmi-main-container -->
-    <section class="bmi-heading">
+    <section class="bmi-heading ">
       <h1>BMI Calculator</h1>
       <p>
         We believe fitness should be accessible to everyone, everywhere,
@@ -225,7 +225,7 @@
     </section>
 
     <!-- Meet Our Team Section -->
-    <section class="met-our-team">
+    <section class="met-our-team " >
       <div class="team-container">
         <div class="team-details">
           <h1>Meet Our Team</h1>
@@ -246,7 +246,7 @@
           <div class="single-card">
             <img src="images/trainer2.png" alt="" />
             <div class="trainer-details">
-              <h3>Jerome Bell</h3>
+              <h3>Taylor Morgan</h3>
               <h4>Trainer</h4>
             </div>
           </div>
@@ -254,14 +254,14 @@
           <div class="single-card">
             <img src="images/trainer3.png" alt="" />
             <div class="trainer-details">
-              <h3>Jerome Bell</h3>
+              <h3>Riley Brooks</h3>
               <h4>Trainer</h4>
             </div>
           </div>
           <div class="single-card">
             <img src="images/trainer4.png" alt="" />
             <div class="trainer-details">
-              <h3>Jerome Bell</h3>
+              <h3>Jordan Mitchell</h3>
               <h4>Trainer</h4>
             </div>
           </div>
@@ -269,7 +269,7 @@
           <div class="single-card">
             <img src="images/trainer5.png" alt="" />
             <div class="trainer-details">
-              <h3>Jerome Bell</h3>
+              <h3>Alex Carter</h3>
               <h4>Trainer</h4>
             </div>
           </div>
